--- a/app/src/main/res/drawable/pink_border.xml
+++ b/app/src/main/res/drawable/pink_border.xml
@@ -2,11 +2,14 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
+    <solid android:color="@color/newLightPink" />
+
     <stroke
         android:width="1dp"
-        android:color="@color/pink"/>
+        android:color="@color/newpink" />
 
     <corners
-        android:radius="8dp"/>
+        android:radius="8dp"
+        android:color="@color/newpink"/>
 
 </shape>
