--- a/app/src/main/res/layout/task_layout.xml
+++ b/app/src/main/res/layout/task_layout.xml
@@ -1,44 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginTop="8dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        app:cardElevation="6dp"
-        app:cardCornerRadius="10dp">
+        app:cardCornerRadius="10dp"
+        app:cardElevation="6dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
             android:background="@drawable/pink_border"
+            android:orientation="vertical"
             android:padding="16dp">
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
                 android:id="@+id/noteTitle"
+                android:layout_width="346dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="200"
-                android:textColor="@color/red"
                 android:fontFamily="@font/poppins"
                 android:text="Note Title"
-                android:textStyle="bold"
-                android:textSize="18sp"/>
+                android:textColor="@color/red"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:id="@+id/noteDesc"
+                android:layout_width="326dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:fontFamily="@font/poppins"
                 android:maxHeight="170dp"
                 android:text="Description"
-                android:textSize="14sp"
-                android:fontFamily="@font/poppins"
-                android:textColor="@color/pink"/>
+                android:textColor="@color/pink"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="210dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Time"
+                android:textColor="@color/pink" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Priority"
+                android:textColor="@color/pink" />
 
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
+
 </layout>
