--- a/app/src/main/res/layout/task_layout.xml
+++ b/app/src/main/res/layout/task_layout.xml
@@ -40,7 +40,7 @@
                 android:textSize="14sp" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/noteTime"
                 android:layout_width="210dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -48,7 +48,7 @@
                 android:textColor="@color/pink" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/notePriority"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
